Fixed JAXB serialization of the Edge objects. Fixed remaining failures in unit tests.